# furiabot

./: .gitignore  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  start-furiabot.sh
.github/workflows/: ci.yml
bot/: main.py
bot/handlers/: menu.py  news.py  noticias.py  start.py
furiabot/bot/handlers/: nextgames.py  start.py
web/: main.py
