[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]       # E: pycodestyle, F: pyflakes, B: bugbear
ignore = ["E501"]              # (opcional) Ignora linhas muito longas

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
